--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section>
             <h3 class="section-title">A summary of My Resume</h3>
 
-          <div class="resume-containar">
+          <div class="resume-container">
             <div class="resume-column">
                 <h3 class="resume-column-title">My Education</h3>
                 <div class="resume-item">
@@ -145,6 +145,9 @@
 
             </div>
           </div>
+         <div class="dowmload-cv">
+            <button class="btn-primary">Download CV</button>
+         </div>
         </section>
     </main>
     <footer>
