--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p id="What-i-do description" class="section-description">
                 I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
             </p>
-            <div class="skills-containar">
+            <div class="skills-container">
                 <div class="skill">
                     <img src="/images/icons/js.png" alt="">
                     <h3 class="skill-title">Vanilla JavaScript</h3>
@@ -145,13 +145,31 @@
 
             </div>
           </div>
-         <div class="dowmload-cv">
+         <div class="download-cv">
             <button class="btn-primary">Download CV</button>
          </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+           <h3 class="section-title">Lets Connect</h3>
+           <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+           <div class="social-links">
+            <a href=""><img src="/images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="/images/icons/insta.png" alt=""></a>
+          </div>
+        </div>
+       
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name" name="" id="">
+                <input type="email" name="" placeholder="Your Email" id=""> 
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
